--- a/blogs/机器学习概览.md
+++ b/blogs/机器学习概览.md
@@ -10,7 +10,37 @@
 非监督分类就是样本数据没有对应的标签。无监督学习的目标大致可分为三类： 一是发现总体数据当中相似数据所构成的所有组，这被叫做聚类分析； 二是确定数据集在他们的输入空间的分布规律，这被叫做密度估计； 三是以可视化为目标将原始高维数据投影到二维或三维空间。
 ## 从算法的角度可以分为以下四类：分类、回归、聚类、降维。
 ### 分类
+* K-Nearest Neighbour
+* Learning Vector Quantization
+* Self-Organizing Map
+* Locally Weighted Learning
+* Classification and Regression Tree(CART)
+* Iterative Dichotomiser 3(ID3)
+* C4.5 & C5.0
+* Conditional Decision Trees
+* Chi-squared Automatic Interaction Detection(CHAID)
+* M5
+* Naive Bayes
 ### 回归
+* Linear Regression
+* Logistic Regression
+* Ordinary Least Squars Regression
+* Stepwise Regression
+* Locally Estimated Scatterplot Smoothing
+* Multivariate Adaptive Regression Splines
 ### 聚类
+* K-Means
+* Hierarchical Clustering
+* Expection Maximisation(EM)
 ### 降维
-
+从某种程度上说，降维算法和聚类其实有点类似，因为它也在试图发现原始训练数据的固有结构，但是降维算法在试图，用更少的信息(更低维的信息)总结和描述出原始信息的大部分内容。
+有意思的是，降维算法一般在数据的可视化，或者是降低数据计算空间有很大的作用。它作为一种机器学习的算法，很多时候用它先处理数据，再灌入别的机器学习算法学习。主要的降维算法包括：<br/>
+* Principal Component Analysis(PCA)
+* Principal Component Regression(PCR)
+* Partial Lease Squares Regression(PLSR)
+* Sammon Mapping
+* Multidimensional Scaling(MDS)
+* Linear Discriminant Analysis(LDA)
+* Mixture Discriminant Analysis (MDA)
+* Quadratic Discriminant Analysis (QDA)
+* Flexible Discriminant Analysis (FDA)
