--- a/blogs/机器学习概览.md
+++ b/blogs/机器学习概览.md
@@ -44,3 +44,16 @@
 * Mixture Discriminant Analysis (MDA)
 * Quadratic Discriminant Analysis (QDA)
 * Flexible Discriminant Analysis (FDA)
+### 模型融合算法
+严格意义上来说，这种融合算法更像是一种策略，它通常结合多个简单的弱机器学习算法，去做更可靠的决策。简单说就是三个臭皮匠赛过诸葛亮。
+* Random Forest
+* Boosting
+* Bootstrapped Aggregation(Bagging)
+* AdaBoost
+* Stacked Generalization(blending)
+* Gradient Boosting Machines(GBM)
+* Gradient Boosted Regression Trees(GBRT)
+
+# 机器学习算法使用图谱
+在碰到具体问题时到底该选用什么算法呢？我们可以参照scikit-learn给出的策略
+<img src="https://github.com/longshengguoji/ML-Learing-Notes/blob/master/blogs/images/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95%E4%BD%BF%E7%94%A8%E5%9B%BE%E8%B0%B1.png"  alt="机器学习算法使用图谱" />
