--- a/blogs/机器学习概览.md
+++ b/blogs/机器学习概览.md
@@ -47,6 +47,7 @@
 * Flexible Discriminant Analysis (FDA)
 ### 模型融合算法
 严格意义上来说，这种融合算法更像是一种策略，它通常结合多个简单的弱机器学习算法，去做更可靠的决策。简单说就是三个臭皮匠赛过诸葛亮。
+* Bagging
 * Random Forest
 * Boosting
 * Bootstrapped Aggregation(Bagging)
